change out sqlite3 gem for postgres, configure database.yml and compose file

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,5 +7,16 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
+    environment:
+      DATABASE_HOST: database # <--- this points to the database service in here
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: some-long-secure-password
+      POSTGRES_DB: myapp_development
   redis:
     image: redis
+  database:
+    image: postgres
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: some-long-secure-password
+      POSTGRES_DB: myapp_development
