--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     volumes:
       - .:/usr/src/app
     environment:
-      DATABASE_HOST: database # <--- this points to the database service in here
+      DATABASE_HOST: database # <--- this points to the database service in here, don't put local
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: some-long-secure-password
       POSTGRES_DB: myapp_development
