--- a/config/database.yml
+++ b/config/database.yml
@@ -1,16 +1,10 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: postgresql
   encoding: unicode
-  host: <%= ENV.feth('DATABASE_HOST') %>
-  username: <%= ENV.feth('POSTGRES_USERNAME') %>
-  password: <%= ENV.feth('POSTGRES_PASSWORD') %>
-  database: <%= ENV.feth('POSTGRES_db') %>
+  host: <%= ENV.fetch('DATABASE_HOST') %>
+  username: <%= ENV.fetch('POSTGRES_USER') %>
+  password: <%= ENV.fetch('POSTGRES_PASSWORD') %>
+  database: <%= ENV.fetch('POSTGRES_DB') %>
   pool: 5
   variables:
     statement_timeout: 5000
@@ -18,9 +12,6 @@ default: &default
 development:
   <<: *default
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
   database: myapp_test
