--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,12 @@ services:
       - "3000:3000"
     volumes:
       - .:/usr/src/app
-    environment:
-      DATABASE_HOST: database # <--- this points to the database service in here, don't put local
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: some-long-secure-password
-      POSTGRES_DB: myapp_development
+    env_file:
+      - .env/development/database
+      - .env/development/web
   redis:
     image: redis
   database:
     image: postgres
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: some-long-secure-password
-      POSTGRES_DB: myapp_development
+    env_file:
+      - .env/development/database
