--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,6 +32,12 @@ services:
       - .env/development/database
     volumes:
       - db_data:/var/lib/postgresql/data
+  selenium_chrome:
+    image: selenium/standalone-chrome-debug
+    logging:
+      driver: none
+      ports:
+        - 5900:5900
 
 volumes:
   db_data:
