--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
       - "4000:4000"
     volumes:
       - .:/usr/src/app
+      - gem_cache:/gems
     env_file:
       - .env/development/database
       - .env/development/web
@@ -20,6 +21,7 @@ services:
       - 3035:3035
     volumes:
       - .:/usr/src/app
+      - gem_cache:/gems
     env_file:
       - .env/development/database
       - .env/development/web
@@ -39,6 +41,6 @@ services:
       driver: none
     ports:
       - 5900:5900
-
 volumes:
   db_data:
+  gem_cache:
