update the stack file to point to prod env files

--- a/docker-stack.yml
+++ b/docker-stack.yml
@@ -6,14 +6,14 @@ services:
     ports:
       - "80:3000"
     env_file:
-      - .env/development/database
-      - .env/development/web
+      - .env/production/database
+      - .env/production/web
   redis:
     image: redis
   database:
     image: postgres
     env_file:
-      - .env/development/database
+      - .env/production/database
     volumes:
       - db_data:/var/lib/postgresql/data
 volumes:
